# CMake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  readme.md
source/: CMakeLists.txt  main.cpp
source/include/: dummyHeader.hpp
source/lib1/: CMakeLists.txt  sampleLib.cpp
source/lib1/include/: sampleLib.hpp
source/lib2/: CMakeLists.txt  lib2Funcs.cpp
